# Tauri-Youtube-Downloader

.github/workflows/: main.yml
youtube-downloader/: .gitignore  index.html  package-lock.json  package.json
youtube-downloader/Scripts/: postinstall.sh
youtube-downloader/src/: App.css  App.tsx
youtube-downloader/src-tauri/: Cargo.toml  tauri.conf.json
youtube-downloader/src-tauri/icons/: icon.icns
youtube-downloader/src-tauri/src/: main.rs
youtube-downloader/src-tauri/src/modules/: download_video.rs  get_video_title.rs  install_dependencies.rs  start_download.rs
youtube-downloader/src/Components/: BasicButton.tsx  Dialog.tsx  DownloadItems.tsx  OutputPath.tsx  Preview.tsx  ProgressBar.tsx  StatusBar.tsx  URLInput.tsx
youtube-downloader/src/Modules/: getOutputPath.ts
